--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "quiver-component-basic": "~1.0.3"
   },
   "devDependencies": {
-    "tape": "^4.0.1",
-    "babel": "^5.8.23"
+    "babel": "^5.8.23",
+    "quiver-stream-util": "^1.4.3",
+    "tape": "^4.0.1"
   },
   "bugs": {
     "url": "https://github.com/quiverjs/quiver-component-extra/issues",
