--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "url": "git@github.com:quiverjs/quiver-component-extra.git"
   },
   "dependencies": {
-    "quiver-util": "~1.1.0",
-    "babel-runtime": "^5.8.24",
-    "quiver-component-base": "~1.0.8",
-    "quiver-component-basic": "~1.0.3"
+    "quiver-util": "~1.1.2",
+    "babel-runtime": "^5.8.25",
+    "quiver-component-base": "~1.0.11",
+    "quiver-component-basic": "~1.0.7"
   },
   "devDependencies": {
+    "tape": "^4.0.1",
     "babel": "^5.8.23",
-    "quiver-stream-util": "^1.4.3",
-    "tape": "^4.0.1"
+    "quiver-stream-util": "^1.4.3"
   },
   "bugs": {
     "url": "https://github.com/quiverjs/quiver-component-extra/issues",
